fixed body overlapping issue + open new window recipes

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -3,6 +3,7 @@ body {
   height: 100vh;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
   color: black;
+  z-index: 0;
   /* background-color: #FBF6F0; */
   /* background: linear-gradient(rgba(255, 164, 91) 0%, rgba(255, 218, 119) 100%); */
   /* overflow:hidden; */
@@ -71,10 +72,12 @@ a.links {
 /* NAVIGATION BAR */
 .top-nav {
   position: fixed;
+  z-index: 1;
   top: 0;
   right: 0;
   margin: auto;
   width: 100%;
+  background-color: white;
 }
 
 nav {
@@ -518,7 +521,7 @@ button {
 
 .nutri-icons {
   height: 30px;
-  width: 30px;
+  width: 30px;  
 }
 
  
@@ -577,4 +580,7 @@ button {
   width: 100%;
   height: 50px;
   font-size: small;
+  background-color:  white;
+  text-align: center;
+  padding-top: 20px;
 }
